--- a/desenvolvimento_4.html
+++ b/desenvolvimento_4.html
@@ -6,15 +6,12 @@
     <title>Projeto JavaScript</title>
 </head>
 <body>
-    <h1>Conexão com um arquivo JavaScript</h1>
+    <h1 id="titulo"></h1>
+    <ul></ul>
+    <a href="https://prozeducacao.com.br"></a>
+    <ol id="lista-ordenada"></ol>
+
     <script src="script.js"></script>
 </body>
 </html>
-function imprimirMensagem() {
-    console.log('Conexão feita com sucesso!');
-}
 
-// Executar a função três vezes
-imprimirMensagem();
-imprimirMensagem();
-imprimirMensagem();
